@@ -1,3 +1,12 @@
+2003-06-18  Brian Koebbe  <brian@koebbe.org>
+
+	* src/sj-main.c (on_cell_edited):
+	Fix title/artist renaming
+
+	* src/sj-extracting.c (on_extract_activate):
+	Clear current_duration when starting a new extraction (progress
+	bar fix)
+
 2003-06-03  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extractor.c:
